--- a/assets/scss/components/_profile.scss
+++ b/assets/scss/components/_profile.scss
@@ -82,5 +82,9 @@
     @include breakpoint-max(md) {
       text-align: center;
     }
+
+    @include breakpoint-max(xs) {
+      margin-top: rem(30);
+    }
   }
 }
