--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,9 +286,10 @@ body {
 }
 .content .content-group .experience p {
   font-size: 0.9375rem;
+  line-height: 1.5rem;
 }
 .content .content-group .certificate {
-  margin-bottom: 0.9375rem;
+  margin-bottom: 1.125rem;
   font-family: "Fira Code", monospace;
 }
 .content .content-group .certificate__title {
@@ -302,6 +303,11 @@ body {
   font-size: 0.8125rem;
   font-weight: 400;
 }
+.content .content-group .certificate p {
+  margin-top: 0.3125rem;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5rem;
+}
 .content .content-group .current-project__title {
   font-family: "Fira Code", monospace;
   font-size: 1.0625rem;
@@ -310,6 +316,7 @@ body {
 }
 .content .content-group .current-project p {
   font-size: 0.9375rem;
+  line-height: 1.5rem;
 }
 
 .side {
