--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -36,11 +36,12 @@
 
       p {
         font-size: rem(15);
+        line-height: rem(24);
       }
     }
 
     .certificate {
-      margin-bottom: rem(15);
+      margin-bottom: rem(18);
       font-family: $base-font-fira;
       &__title {
         font-size: rem(17);
@@ -55,6 +56,12 @@
         font-size: rem(13);
         font-weight: 400;
       }
+
+      p {
+        margin-top: rem(5);
+        font-family: $base-font-open;
+        line-height: rem(24);
+      }
     }
 
     .current-project {
@@ -67,6 +74,7 @@
 
       p {
         font-size: rem(15);
+        line-height: rem(24);
       }
     }
   }
